# OpenGL-wrapper

./: .gitmodules  CMakeLists.txt  LICENSE.txt
include/glad/: glad.h
include/gui/: imgui_impl.hpp  window.hpp
include/ow/: VBO.hpp  base_light.hpp  camera_fps.hpp  checkable.hpp  directional_light.hpp  exceptions.hpp  lights_set.hpp  mesh.hpp  model.hpp  opengl_codes.hpp  point_light.hpp  shader_program.hpp  skybox.hpp  spotlight.hpp  texture.hpp  utils.hpp  vertex.hpp
resources/shaders/: basic_frag.glsl  basic_vertex.glsl  imgui_frag.glsl  imgui_vertex.glsl  lamp_vertex.glsl  phong_frag.glsl  phong_skybox_frag.glsl  phong_vertex.glsl  skybox_frag.glsl  skybox_vertex.glsl
shaders/: basic.fs  basic.vs  fragment_phong.glsl
src/: glad.c
src/examples/: getting_started.cpp  lights.cpp  model_loading.cpp
src/gui/: imgui_impl.cpp  window.cpp
src/imgui/: ImguiImpl.cpp  ImguiImpl.hpp
src/in55/: cube.cpp  cube.hpp  cube_object.cpp  cube_object.hpp  imgui_windows.cpp  imgui_windows.hpp  lamp.cpp  lamp.hpp  main.cpp  parametrical_object.cpp  parametrical_object.hpp
src/ow/: camera_fps.cpp  mesh.cpp  model.cpp  opengl_codes.cpp  shader_program.cpp  skybox.cpp  texture.cpp  utils.cpp
